[Fix] Overflow hidden for offscreen elements

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ body {
   flex-flow: column;
   position: relative;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 a {
